[package]
name = "ditherpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitvec = { version = "1.0.0", features = ["serde"] }
image = "0.24.1"
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "3.1.6", features = ["derive"] }
